rustdesk/service-rustdesk-com.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-com
spec:
  type: ExternalName
  externalName: rustdesk.com
