rustdesk/service-rustdesk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-service
spec:
  type: LoadBalancer
  selector:
    app: rustdesk
  ports:
    - name: hbbs-tcp
      port: 21115
      targetPort: 21115
      protocol: TCP
    - name: hbbs-udp
      port: 21116
      targetPort: 21116
      protocol: UDP
    - name: hbbs-tcp-main
      port: 21116
      targetPort: 21116
      protocol: TCP
    - name: hbbr-tcp
      port: 21117
      targetPort: 21117
      protocol: TCP
