rustdesk/ingress-rustdesk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: "/web$1"
    nginx.ingress.kubernetes.io/proxy-ssl-name: rustdesk.com
  name: rustdesk
  namespace: rustdesk
spec:
  ingressClassName: external
  rules:
    - host: rustdesk.ak-online.be
      http:
        paths:
          - backend:
              service:
                name: rustdesk-com
              port:
                number: 443
            path: '/(.*)'
            pathType: ImplementationSpecific
  tls:
  - hosts:
      - rustdesk.ak-online.be
    secretName: tls-rustdesk
